# ETL-DEVOPS-MINIMALIST

./: .env.example  .gitignore  CLAUDE_DEV_REFERENCE.md  CLEANING_REPORT.md  README.md  STATUS_GITLAB.md  analyze_actions.py  cleanup_exports.py  kenobi_maestro.py  maestro_kenobi.py  maestro_kenobi_refactored.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  ruff.toml  sonar-project.properties  test_event_structure.py  test_excel_content.py  validate.py
.github/instructions/: Claude-Dev.instructions.md
.github/workflows/: sonarcloud.yml
config/: config.example.yaml  projects.yaml
examples/: demo_batch_processing.py  demo_phase1_improvements.py  demo_phase2_architecture.py  test_batch_integration.py
gitlab/: gitlab_client.py  gitlab_users.py
gitlab_tools/: __init__.py  base_extractor.py  config.py  exceptions.py
gitlab_tools/client/: __init__.py  gitlab_client.py
gitlab_tools/exporters/: __init__.py  excel_exporter.py
gitlab_tools/extractors/: __init__.py  commits_extractor.py  events_extractor.py  groups_extractor.py  merge_requests_extractor.py  pipelines_extractor.py  projects_extractor.py  users_extractor.py
gitlab_tools/utils/: __init__.py  batch_processor.py  cache_manager.py
kenobi_tools/orchestrators/: export_orchestrator.py
kenobi_tools/processing/: extraction_processor.py
kenobi_tools/ui/: kenobi_menu.py  (+1 more)
scripts/: export_gitlab_commits.py  export_gitlab_events.py  export_gitlab_merge_requests.py  export_gitlab_pipelines.py  export_gitlab_projects.py  export_gitlab_users.py  export_users.py
sonar/: sonar_coverage.py
(+34 files in other folders)
