[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kenobi_tools"
version = "1.0.0"
description = "GitLab ETL and DevOps tools"
dependencies = [
    "python-gitlab>=6.0.0",
    "pandas>=2.0.0", 
    "openpyxl>=3.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kenobi_tools*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort (import sorting)
]

ignore = [
    "E501",  # line too long (géré par line-length)
]

[tool.ruff.lint.isort]
known-first-party = ["kenobi_tools"]
